Bug 112189 - [CI][BAT] igt@runner@aborted - fail - WARN_ON(qi->num_points > (sizeof(qi->points) / sizeof((qi->points)[0]) + (sizeof(struct { int:(-!!(__builtin_types_compatible_p(typeof((qi->points)), typeof(&(qi->points)[0])))); }))))
Summary: [CI][BAT] igt@runner@aborted - fail - WARN_ON(qi->num_points > (sizeof(qi->po...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: DRI git
Hardware: Other All
: not set not set
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-10-31 16:33 UTC by Lakshmi
Modified: 2019-11-27 06:59 UTC (History)
1 user (show)

See Also:
i915 platform: TGL
i915 features:


Attachments

Description Lakshmi 2019-10-31 16:33:59 UTC
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7229/fi-tgl-u2/igt@runner@aborted.html

https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7229/fi-tgl-u2/boot0.txt

9.325665] ------------[ cut here ]------------
<4>[    9.325668] WARN_ON(qi->num_points > (sizeof(qi->points) / sizeof((qi->points)[0]) + (sizeof(struct { int:(-!!(__builtin_types_compatible_p(typeof((qi->points)), typeof(&(qi->points)[0])))); }))))
<4>[    9.325748] WARNING: CPU: 2 PID: 379 at drivers/gpu/drm/i915/display/intel_bw.c:125 icl_get_bw_info+0x4a6/0x510 [i915]
<4>[    9.325750] Modules linked in: i915(+) mei_hdcp x86_pkg_temp_thermal coretemp crct10dif_pclmul crc32_pclmul cdc_ether usbnet mii ghash_clmulni_intel mei_me mei prime_numbers
<4>[    9.325761] CPU: 2 PID: 379 Comm: systemd-udevd Not tainted 5.4.0-rc5-CI-CI_DRM_7229+ #1
<4>[    9.325763] Hardware name: Intel Corporation Tiger Lake Client Platform/TigerLake U DDR4 SODIMM RVP, BIOS TGLSFWI1.R00.2427.A01.1910201912 10/20/2019
<4>[    9.325813] RIP: 0010:icl_get_bw_info+0x4a6/0x510 [i915]
<4>[    9.325816] Code: 24 04 40 c0 ef 04 83 e0 0f 40 88 7c 24 04 88 44 24 13 e9 00 fd ff ff 48 c7 c6 d8 99 29 a0 48 c7 c7 17 13 2c a0 e8 2a e0 f1 e0 <0f> 0b 41 bf 03 00 00 00 c6 44 24 13 03 e9 f5 fc ff ff 48 c7 c6 d6
<4>[    9.325818] RSP: 0018:ffffc900005879e8 EFLAGS: 00010286
<4>[    9.325821] RAX: 0000000000000000 RBX: ffff88848ba00000 RCX: 0000000000000002
<4>[    9.325823] RDX: 0000000000000006 RSI: ffff8884934788d0 RDI: ffffffff8213bf19
<4>[    9.325826] RBP: ffff88848ba00000 R08: ffff8884934788d0 R09: 0000000000000000
<4>[    9.325827] R10: 0000000000000000 R11: 0000000000000000 R12: ffff88849be5c000
<4>[    9.325829] R13: ffff88848ba0b8c8 R14: ffff88848ba00d88 R15: ffff88849be5c000
<4>[    9.325831] FS:  00007fe47ad2c680(0000) GS:ffff88849fd00000(0000) knlGS:0000000000000000
<4>[    9.325833] CS:  0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4>[    9.325835] CR2: 00007f5715489d70 CR3: 0000000493472002 CR4: 0000000000760ee0
<4>[    9.325836] PKRU: 55555554
<4>[    9.325838] Call Trace:
<4>[    9.325891]  i915_driver_probe+0xedc/0x15a0 [i915]
<4>[    9.325939]  i915_pci_probe+0x43/0x1b0 [i915]
<4>[    9.325946]  ? _raw_spin_unlock_irqrestore+0x39/0x60
<4>[    9.325955]  pci_device_probe+0x9e/0x120
<4>[    9.325963]  really_probe+0xea/0x420
<4>[    9.325968]  driver_probe_device+0x10b/0x120
<4>[    9.325971]  device_driver_attach+0x4a/0x50
<4>[    9.325975]  __driver_attach+0x97/0x130
<4>[    9.325979]  ? device_driver_attach+0x50/0x50
<4>[    9.325982]  bus_for_each_dev+0x74/0xc0
<4>[    9.325987]  bus_add_driver+0x142/0x220
<4>[    9.325991]  ? 0xffffffffa03de000
<4>[    9.325994]  driver_register+0x56/0xf0
<4>[    9.325997]  ? 0xffffffffa03de000
<4>[    9.326000]  do_one_initcall+0x58/0x2ff
<4>[    9.326006]  ? rcu_read_lock_sched_held+0x4d/0x80
<4>[    9.326012]  ? kmem_cache_alloc_trace+0x290/0x2c0
<4>[    9.326020]  do_init_module+0x56/0x1f8
<4>[    9.326024]  load_module+0x243e/0x29f0
<4>[    9.326042]  ? __do_sys_finit_module+0xe9/0x110
<4>[    9.326045]  __do_sys_finit_module+0xe9/0x110
<4>[    9.326057]  do_syscall_64+0x4f/0x210
<4>[    9.326061]  entry_SYSCALL_64_after_hwframe+0x49/0xbe
<4>[    9.326063] RIP: 0033:0x7fe47a84d839
<4>[    9.326066] Code: 00 f3 c3 66 2e 0f 1f 84 00 00 00 00 00 0f 1f 40 00 48 89 f8 48 89 f7 48 89 d6 48 89 ca 4d 89 c2 4d 89 c8 4c 8b 4c 24 08 0f 05 <48> 3d 01 f0 ff ff 73 01 c3 48 8b 0d 1f f6 2c 00 f7 d8 64 89 01 48
<4>[    9.326067] RSP: 002b:00007ffd7a5db798 EFLAGS: 00000246 ORIG_RAX: 0000000000000139
<4>[    9.326070] RAX: ffffffffffffffda RBX: 000055e841e7e660 RCX: 00007fe47a84d839
<4>[    9.326072] RDX: 0000000000000000 RSI: 00007fe47a52c145 RDI: 000000000000000f
<4>[    9.326074] RBP: 00007fe47a52c145 R08: 0000000000000000 R09: 00007ffd7a5db8b0
<4>[    9.326076] R10: 000000000000000f R11: 0000000000000246 R12: 0000000000000000
<4>[    9.326078] R13: 000055e841e643a0 R14: 0000000000020000 R15: 000055e841e7e660
<4>[    9.326092] irq event stamp: 621630
<4>[    9.326099] hardirqs last  enabled at (621629): [<ffffffff8112ab6c>] vprintk_emit+0xcc/0x340
<4>[    9.326101] hardirqs last disabled at (621630): [<ffffffff81001c0a>] trace_hardirqs_off_thunk+0x1a/0x20
<4>[    9.326104] softirqs last  enabled at (621558): [<ffffffff81c00385>] __do_softirq+0x385/0x47f
<4>[    9.326109] softirqs last disabled at (621137): [<ffffffff810b7efa>] irq_exit+0xba/0xc0
<4>[    9.326111] ---[ end trace 454ed10df78c16da ]---
Comment 2 Jani Saarinen 2019-11-27 06:59:16 UTC
This now fixed

author	Stanislav Lisovskiy <stanislav.lisovskiy@intel.com>	2019-11-25 18:08:00 +0200
committer	Ville Syrjälä <ville.syrjala@linux.intel.com>	2019-11-26 18:27:37 +0200
commit	9b93daa93ebe85bd7f355f4f043f3e52e67c86cf
tree	3374e99416fa3f9db3f2d68df55b670558748c97
parent	58b4c1a07ada7fb91ea757bdb9bd47df02207357

drm/i915: Support more QGV points
According to BSpec 53998, there is a mask of
max 8 SAGV/QGV points we need to support.

Bumping this up to keep the CI happy(currently
preventing tests to run), until all SAGV
changes land.

v2: Fix second plane where QGV points were
    hardcoded as well.

v3: Change the naming of I915_NUM_SAGV_POINTS
    to be I915_NUM_QGV_POINTS, as more meaningful
    (Ville Syrjälä)

Reviewed-by: Ville Syrjälä <ville.syrjala@linux.intel.com>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=112189
Signed-off-by: Stanislav Lisovskiy <stanislav.lisovskiy@intel.com>
Link: https://patchwork.freedesktop.org/patch/msgid/20191125160800.14740-1-stanislav.lisovskiy@intel.com
[vsyrjala: Add missing braces around else (checkpatch), fix Bugzilla tag]
Signed-off-by: Ville Syrjälä <ville.syrjala@linux.intel.com>
Comment 3 Jani Saarinen 2019-11-27 06:59:46 UTC
Closing as nnw TGL in BAT tests and do not taint in the boot.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.